--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Portal UMKM</title>
+  <title>Portal Web Usaha</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -10,8 +10,8 @@
 
 <header class="header">
   <div class="container">
-    <h1 id="portalName">Nama Portal</h1>
-    <p class="tagline">Pusat Akses Digital Usaha & UMKM</p>
+    <h1 id="portalName">PORTAL WEB USAHA</h1>
+    <p class="tagline">Pusat Akses Website Usaha</p>
 
     <input
       type="search"
@@ -30,7 +30,7 @@
 </main>
 
 <footer class="footer">
-  <p>© 2026 Portal UMKM</p>
+  <p>© 2026 Portal Web Usaha</p>
 </footer>
 
 <script src="script.js"></script>
