--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- index.html -->
+<link rel="stylesheet" href="style.css?v=1.0.1"/>
+<script src="script.js?v=1.0.1"></script>
 <!DOCTYPE html>
 <html lang="id">
 <head>
